pull in versions for the JBAS client deps by importing the jboss-as-parent pom's managed deps; various fixes to get the plugin working when connecting to the PS remotely (i.e. when the plugin is running inside the Jopr Enterprise Agent)